adjust image sixe

--- a/author_info/keen.html
+++ b/author_info/keen.html
@@ -12,7 +12,7 @@
         <div class='div-img'>
           <span class='vertical-helper'></span>
           <!-- 수정부 -->
-          <img src='https://scontent.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/301468_489370531088155_1246761793_n.jpg?oh=80387ab09dafd76a0d30ffcdadad8d81&oe=56AC52F6' alt='keen'>
+          <img src='https://avatars1.githubusercontent.com/u/305552?v=3&s=460' alt='keen'>
           <!-- 수정부 1 끝 -->
         </div>
       </div>
